Added nice listing of products (thirs party price not working well yet)

--- a/static/css/amazonpricetracker.css
+++ b/static/css/amazonpricetracker.css
@@ -50,3 +50,12 @@ body {
 code {
   font-size: 80%;
 }
+
+
+.price{
+    -webkit-text-fill-color: green;
+}
+
+.no-price{
+    -webkit-text-fill-color: gray;
+}
