--- a/templates/search.html
+++ b/templates/search.html
@@ -45,9 +45,10 @@
                 </div>
 
                 <div class="col-md-6">
+                    
                     <h4 class="list-group-item-heading">{{product.title}}</h4>
                     <div class="row">
-                        <div class="col-md-8">
+                        <div class="col-md-10">
                             <br/>
                             <p class="list-group-item-text"><strong>In:</strong> {{product.type}}</p>
                             <p class="list-group-item-text"><strong>Model:</strong> {{product.model}}</p>
@@ -57,10 +58,9 @@
                         <div class="col-md-2">
                             <br/>
                             <br/>
-                            <br/>
-                            <a class="btn btn-md btn-primary pull-right" href="/product/{{product.ASIN}}"><span class="fa fa-mail-forward"></span>Track Now !</a>
+                            <a class="btn btn-md btn-primary pull-right" href="/product/{{product.ASIN}}"><span class="glyphicon glyphicon-stats"></span> Track Now !</a>
                         </div>
-                        <div class="col-md-1"></div>
+                        <!--<div class="col-md-1"></div>-->
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -73,7 +73,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Amazon</td>
+                                <td>Best New Price</td>
                                 {% if product.newFormattedPrice != "" %}
                                 <td class="price">{{product.newFormattedPrice}}</td>
                                 {% else %}
@@ -81,14 +81,14 @@
                                 {% endif %}
                             </tr>
 
-                            <tr>
+                            <!--<tr>
                                 <td>3rd Party New</td>
                                 {% if product.thirdPartyNewFormattedPrice != "" %}
                                 <td class="price">{{product.thirdPartyNewFormattedPrice}}</td>
                                 {% else %}
                                 <td class="no-price">Not In Stock</td>
                                 {% endif %}
-                            </tr>
+                            </tr>-->
 
                             <tr>
                                 <td>3rd Party Used</td>
