--- a/templates/product.html
+++ b/templates/product.html
@@ -1,4 +1,6 @@
  {% include "header.html" %}
+  <script src="/static/js/jquery-2.1.1.min.js"></script> 
+ <script src="/static/js/save_alert.js"></script> 
 
 <div class="container">
 
@@ -50,7 +52,9 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <form id="new-price-form" name="save-alert-form" method="post" class="form-inline" role="form">
+                        <!--<form id="new-price-form" name="save-alert-form" class="form-inline">-->
+                            <input type="hidden" name="asin" value="{{product.ASIN}}">
+                            <input type="hidden" name="locale" value="{{product.locale}}">
                             <div class="col-md-2">
                                 <p class="form-control-static"><strong>Best New Price</strong></p>
                             </div>
@@ -79,9 +83,9 @@
                                 </div>
                             </div>
                             <div class="col-md-2">
-                                <input id="new-save-alert-button" name="save-alert-button" class="btn btn-md btn-primary pull-right" type="submit" value="Save Alert">
+                                <button id="new-save-alert-button" name="save-alert-button" class="btn btn-md btn-primary pull-right"><span class="glyphicon glyphicon-floppy-disk"></span> Save Alert</button>
                             </div>
-                        </form>
+                      <!--  </form>-->
                     </div>
                 </div>
 
@@ -89,7 +93,7 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <form id="used-price-form" name="save-alert-form" method="post" class="form-inline" role="form">
+                        <form id="used-price-form" name="save-alert-form" class="form-inline" role="form">
                             <div class="col-md-2">
                                 <p class="form-control-static"><strong>3rd Party Used</strong></p>
                             </div>
@@ -118,7 +122,7 @@
                                 </div>
                             </div>
                             <div class="col-md-2">
-                                <input id="used-save-alert-button" name="save-alert-button" class="btn btn-md btn-primary pull-right" type="submit" value="Save Alert">
+                                <button id="used-save-alert-button" name="save-alert-button" class="btn btn-md btn-primary pull-right" ><span class="glyphicon glyphicon-floppy-disk"></span> Save Alert</button>
                             </div>
                         </form>
                     </div>
